--- a/BTL/DOI_SONG/ChumAnh.html
+++ b/BTL/DOI_SONG/ChumAnh.html
@@ -57,11 +57,11 @@
         <nav class="main-nav">
             <div class="container">
                 <ul class="mains-menu">
-                    <li><a href="#"><i class="fas fa-home"></i></a></li>
-                    <li><a href="#">Star</a></li>
-                    <li><a href="#">Ciné</a></li>
-                    <li><a href="#">Musik</a></li>
-                    <li><a href="#">Beauty & Fashion</a></li>
+                    <li><a href="demoBTL.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="/BTL1/Star/WebStar.html">Star</a></li>
+                    <li><a href="/BTL1/Ciné/WebCine.html">Ciné</a></li>
+                    <li><a href="/BTL1/Musik/WebMusik.html">Musik</a></li>
+                    <li><a href="/BTL1/Beauty&Fashion/WebBeautyFashion.html">Beauty & Fashion</a></li>
                     <li><a href="../DOI_SONG/DoiSong.html">Đời sống</a></li>
                     <li><a href="../MONEY-Z/Money-Z.html">Money-Z</a></li>
                     <li><a href="../AN_QUAY_DI/An.html">Ăn - Quẩy - Đi</a></li>
@@ -106,25 +106,25 @@
                         </div>
                     </div>
                     <div class="menu-column">
-                        <a href="#">Musik</a>
+                           <a class="title-menu" href="/BTL1/Musik/WebMusik.html">Musik</a>
+                            <div class="submenu">
+                                <a href="/BTL1/Musik/WebAuMy.html">Âu-Mỹ</a>
+                                <a href="/BTL1/Musik/WebChauA.html">Châu Á</a>
+                                <a href="/BTL1/Musik/WebVietNam.html">Việt Nam</a>
+                                <a href="/BTL1/demoBTL.html">Hip-hop neva die</a>
+                            </div>
+                    </div>
+                    <div class="menu-column">
+                        <a class="title-menu" href="/BTL1/Ciné/WebCine.html">Ciné</a>
                         <div class="submenu">
-                            <a href="#">Âu-Mỹ</a>
-                            <a href="#">Châu Á</a>
-                            <a href="#">Việt Nam</a>
-                            <a href="#">Hip-hop neva die</a>
+                            <a href="/BTL1/Ciné/WebPhimChieuRap.html">Phim chiếu rạp</a>
+                            <a href="/BTL1/Ciné/WebPhimVietNam.html">Phim Việt Nam</a>
+                            <a href="/BTL1/Ciné/WebSeriesTruyenHinh.html">Series truyền hình</a>
+                            <a href="/BTL1/Ciné/WebHoaNguHanQuoc.html">Hoa ngữ - Hàn Quốc</a>
                         </div>
                     </div>
                     <div class="menu-column">
-                        <a href="#">Ciné</a>
-                        <div class="submenu">
-                            <a href="#">Phim chiếu rạp</a>
-                            <a href="#">Phim Việt Nam</a>
-                            <a href="#">Series truyền hình</a>
-                            <a href="#">Hoa ngữ - Hàn Quốc</a>
-                        </div>
-                    </div>
-                    <div class="menu-column">
-                        <a href="#">Ciné</a>
+                        <a class="title-menu"href="#">Tek-Life</a>
                         <div class="submenu">
                             <a href="#">Metaverse</a>
                             <a href="#">How-To</a>
@@ -135,11 +135,11 @@
                 </div>
                 <div class="menu-row">
                     <div class="menu-column">
-                        <a href="#">Star</a>
+                        <a class="title-menu" href="/BTL1/Star/WebStar.html">Star</a>
                         <div class="submenu">
-                            <a href="#">Sao Việt</a>
-                            <a href="#">Hội bạn thân showbiz</a>
-                            <a href="#">TV Show</a>
+                            <a href="/BTL1/Star/WebSaoViet.html">Sao Việt</a>
+                            <a href="/BTL1/Star/WebHoiBanThanShowbiz.html">Hội bạn thân showbiz</a>
+                            <a href="/BTL1/Star/WebTVShow.html">TV Show</a>
                         </div>
                     </div>
                     <div class="menu-column">
@@ -183,11 +183,11 @@
             <div class="border-solid"></div>
             <div class="web-info">
                 <span class="title-mini-web">Tải app</span>
-                <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BA%BB/id670518264?ls=1" target="_blank">IOS</a>
+                <a class="mini-web" href="https://apps.apple.com/us/app/kenh14-vn-tin-t%E1%BB%A9c-gi%E1%BB%9Bi-tr%E1%BB%A3/id670518264?ls=1" target="_blank">IOS</a>
                 <a class="mini-web" href="https://play.google.com/store/apps/details?id=vcc.mobilenewsreader.kenh14" target="_blank">Android</a>
                 <a class="title-mini-web" href="https://www.facebook.com/K14vn" target="_blank">Fanpage</a>
-                <a class="title-mini-web" href="#">Liên hệ</a>
-                <a class="mini-web" href="#">Quảng cáo</a>
+                <a class="title-mini-web" href="#" id="#liên hệ">Liên hệ</a>
+                <a class="mini-web" href="https://kenh14.vn/adv.chn">Quảng cáo</a>
             </div>
         </div>
     </header>
